# open_pmx_editor

./: Cargo.toml  eframe_template-7c6bf441c75b390a4396f5d37af27bf7ee9addf79d99c3cd9eb4b2085b27b3e8c0b2b5779fd9034278d1f018f5cb1613.js  index.html
assets/ImagineGirls_Iris_v102_mmd/: readme-e.txt  readme-j.txt
assets/ImagineGirls_Iris_v102_mmd/Iris_mmd/: 8.sph  9.spa
shader/: custom3d_wgpu_shader.wgsl  grid.wgsl  mesh.wgsl
src/: app.rs  camera.rs  common.rs  custom3d.rs  custom3d_wgpu.rs  dict.rs  grid.rs  lib.rs  main.rs  misc.rs  motion.rs  pmm.rs  pmx.rs  pmx_writer.rs  texture.rs  vmd_reader.rs  vmd_writer.rs
src/format/: common.rs  mod.rs  motion.rs  pmm.rs  pmx.rs  pmx_writer.rs  vmd_reader.rs  vmd_writer.rs
