[package]
name = "open_pmx_editor"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.27"
egui_extras = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
rfd = "0.14"
bytemuck = "1.14"
encoding = "0.2"
byteorder = "1.4"
glam = "0.27"
bitflags = "2"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

env_logger = "0.11"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg", "exr", "bmp", "dds"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
